Se modificaròn los archivos.php y .css

--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 /*
-Theme Name: Luna
-Theme URI: https://wordpress.com/themes/Luna/
-Description: Luna is a clean and modern portfolio theme, geared towards creative professionals like designers, artists, and photographers. With its simple homepage template featuring portfolio projects, Luna aims to draw viewers right at what matters most: your wonderful work.
+Theme Name: luna
+Theme URI: https://wordpress.com/themes/luna/
+Description: luna is a clean and modern portfolio theme, geared towards creative professionals like designers, artists, and photographers. With its simple homepage template featuring portfolio projects, luna aims to draw viewers right at what matters most: your wonderful work.
 Version: 1.0.6
-Author: Aztli
+Author: Automattic
 Author URI: https://wordpress.com/themes/
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: Luna
+Text Domain: luna
 */
 
 /*--------------------------------------------------------------
