Cambios en el header, oferta academica y footer

--- a/css/default.css
+++ b/css/default.css
@@ -4,6 +4,7 @@
 /*  header contact info section ***/
 .header_section{
 	background-color:#BA68C8;
+	background-image: url("../images/1.png");
 	color:#fff;
 }
 /** navbar menus ***/
