--- a/css/default.css
+++ b/css/default.css
@@ -410,11 +410,11 @@
 
 }
 .enigma_client_prev, .enigma_client_next {
-    background-color: #fff;
+  background-color: #fff;
 	border: 2px solid #BA68C8;
 }
 .enigma_client_prev:hover, .enigma_client_next:hover {
-    background-color: #BA68C8;
+  background-color: #BA68C8;
 	color:#fff;
 }
 .enigma_client_prev:hover i, .enigma_client_next:hover i{
@@ -587,3 +587,24 @@ color: white;
 .smooth_slider .smooth_slideri p.more{color:#0092E4;font-family:Arial,Helvetica,sans-serif;font-size:12px;margin-left: 10px;}
 .smooth_slider .smooth_next{}
 .smooth_slider .smooth_prev{} .smooth_slider .smooth_slider_eshortcode{float:left;margin:0 10px 0 0px;height:720px;border:0px solid #000000;width:1980px;} .smooth_slider .smooth_more a{color:#0092E4;font-family:Arial,Helvetica,sans-serif;font-size:12px;margin-left: 10px;}
+
+.cursos{
+	background-color: #BA68C8;
+	text-align: center;
+	position: relative;
+	margin: 0 10px 50px 10px;
+	height: 150px;
+	width: 30%;
+	border-bottom: 6px solid #9e4eac;
+	border-radius: 5px;
+
+}
+
+.cursos a{
+	color: #ffffff;
+}
+
+.cursos p{
+	margin-bottom: 10px;
+	color: #333333;
+}
